Add exchange rate CRUD API
